# vigia

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  build_deb.sh  build_debs.sh  build_windows.ps1  client.py  ejecutar.txt  instalar.sh  instalar_cliente.sh  instalar_servidor.sh  requirements_cliente.txt  requirements_servidor.txt  server.py  test_client.py  test_remote_control.py  vigia-launcher.py
templates/: dashboard.html
vigia-dashboard/: build.sh
vigia-dashboard/frontend/: index.html
vigia-dashboard/src-tauri/: Cargo.toml  tauri.conf.json
vigia-dashboard/src-tauri/capabilities/: default.json
vigia-dashboard/src-tauri/src/: lib.rs  main.rs
windows/: installer_client.iss  installer_server.iss
